<resources>
    <string name="app_name">PayQ</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="button_text_ok">Ok</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="verify_mobile">Verify Mobile</string>
    <string name="title_activity_verify_mobile_no_fragment">VerifyMobileNo</string>
    <string name="verify_mobile_no_title">Verify your mobile number</string>
    <string name="verify_email">Verify Email</string>
    <string name="enter_email_hint">Email</string>
    <string name="verify_email_title">Verify your \nemail Id</string>
    <string name="sent_otp_to_email_label">We sent it to the email %s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="your_available_balence">Your available balence</string>
    <string name="transactions">transactions</string>
    <string name="add">Add</string>
    <string name="send">Send</string>
    <string name="refund">Refund</string>
    <string name="withdraw">Withdraw</string>
    <string name="title_markets">Markets</string>
    <string name="title_winners">Winners</string>
    <string name="title_profile">Profile</string>
    <string name="see_all"><![CDATA[See all >]]></string>
    <string name="users">USERS</string>
    <string name="rank">RANK</string>
    <string name="my_rewards">My Rewards</string>
    <string name="all_rewards">All rewards</string>
    <string name="my_transactions">My Transactions</string>
    <string name="my_transactions_sub_text">Payments history</string>
    <string name="my_refunds">My Refunds</string>
    <string name="my_refunds_sub_text">Refund history</string>
    <string name="notifications">Notifications</string>
    <string name="fingerprint_lock">Fingerprint Lock</string>
    <string name="fingerprint_lock_sub_text">When enabled, you\'ll need to use fingerprint to open app</string>
    <string name="sign_out">Sign Out</string>
    <string name="tap_and_pay"><![CDATA[Tap & Pay]]></string>
    <string name="requested_amount">Requested Amount</string>
    <string name="debit_from">Debit From</string>
    <string name="wire_less_payment_desc"><![CDATA[Open PayQ app & bring your phone near PayQ NFC tag to View and Pay]]></string>
    <string name="title_activity_wireless_payment">WirelessPaymentActivity</string>
    <string name="bill_payment_successful">Bill Payment Successful</string>
    <string name="transaction_id">Transaction Id</string>
    <string name="bill_paid_to">Bill Paid To</string>
    <string name="debited_from">Debited from</string>
    <string name="download_receipt">Download receipt</string>
    <string name="share_receipt">Share receipt</string>
    <string name="request_for_refund">Request for refund</string>
    <string name="contact_payq_support">Contact PayQ Support</string>
    <string name="done">Done</string>
    <string name="nfc_enabled_payments_using_payq">NFC enabled payments using PayQ</string>
</resources>