<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.jettysoft.payq.ui.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_markets"
        android:name="com.jettysoft.payq.ui.main.market.MarketFragment"
        android:label="@string/title_markets"
        tools:layout="@layout/fragment_market" />

    <fragment
        android:id="@+id/navigation_winners"
        android:name="com.jettysoft.payq.ui.main.winners.WinnersFragment"
        android:label="@string/title_winners"
        tools:layout="@layout/fragment_winners" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.jettysoft.payq.ui.main.profile.ProfileFragment"
        android:label="@string/title_winners"
        tools:layout="@layout/fragment_winners" />
</navigation>