<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.tapandpay.BillPaymentSuccessFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_payment_success"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:paddingBottom="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_payment_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:src="@drawable/img_splash_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_success_msg"
                style="@style/RegularTextMedium20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/bill_payment_successful"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_payment_success" />

            <TextView
                android:id="@+id/tv_date_time"
                style="@style/RegularText14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="02:24 PM on 26 Sep 2021"
                android:textColor="@color/primary_variant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_success_msg" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_trasac_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_payment_success">

            <TextView
                android:id="@+id/tv_transaction_id"
                style="@style/RegularText14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transaction_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_transaction_no"
                style="@style/BoldText14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="IQ123456678982"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_transaction_id" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="COPY"
                android:textColor="@color/font_color"
                android:textAppearance="@style/RegularText14"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_bill_paid_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="16dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_trasac_details">

            <TextView
                android:id="@+id/tv_bill_paid_to_label"
                style="@style/RegularText14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bill_paid_to"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/iv_merchant_shop_avatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_profile"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_bill_paid_to_label"
                />

            <TextView
                android:id="@+id/tv_merchant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fresh Market"
                style="@style/BoldText14"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_merchant_shop_avatar"
                app:layout_constraintTop_toTopOf="@+id/iv_merchant_shop_avatar"
                app:layout_constraintStart_toEndOf="@+id/iv_merchant_shop_avatar"
                />
            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$105.55"
                android:textColor="@color/primary"
                style="@style/BoldText18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_merchant_shop_avatar"
                app:layout_constraintBottom_toBottomOf="@+id/iv_merchant_shop_avatar"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_debit_from_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="16dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_bill_paid_details">

            <TextView
                android:id="@+id/tv_debited_from"
                style="@style/RegularText14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/debited_from"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/iv_wallet"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_wallet"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_debited_from"
                />

            <TextView
                android:id="@+id/tv_wallet_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PayQ Wallet"
                style="@style/BoldText14"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_wallet"
                app:layout_constraintTop_toTopOf="@+id/iv_wallet"
                app:layout_constraintStart_toEndOf="@+id/iv_wallet"
                />
            <TextView
                android:id="@+id/tv_wallet_balence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$105.55"
                style="@style/RegularTextMedium14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_wallet"
                />
            <TextView
                android:id="@+id/btn_check_balence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CHECK BALANCE"
                style="@style/RegularTextMedium14"
                android:textColor="@color/primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_wallet_balence"
                app:layout_constraintBottom_toBottomOf="@+id/iv_wallet"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_download_receipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="16dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_debit_from_details">

            <TextView
                android:id="@+id/tv_download_receipt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BoldText14"
                android:text="@string/download_receipt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <ImageView
                android:id="@+id/iv_download_pdf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_pdf"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_share_receipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="16dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_download_receipt">

            <TextView
                android:id="@+id/tv_share_receipt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BoldText14"
                android:text="@string/share_receipt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <ImageView
                android:id="@+id/iv_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_whatsapp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_request_for_refund"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_for_refund"
            style="@style/BoldText14"
            android:textColor="@color/primary"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/cl_share_receipt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_contact_payq_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="16dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_request_for_refund">

            <ImageView
                android:id="@+id/iv_support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_support"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:id="@+id/tv__receipt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BoldText14"
                android:layout_marginStart="10dp"
                android:text="@string/contact_payq_support"
                app:layout_constraintStart_toEndOf="@+id/iv_support"
                app:layout_constraintTop_toTopOf="@+id/iv_support"
                app:layout_constraintBottom_toBottomOf="@+id/iv_support"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minHeight="52dp"
            android:text="@string/done"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/cl_contact_payq_support"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
